[gd_scene load_steps=11 format=3 uid="uid://dy67tjwq2ndxl"]

[ext_resource type="Script" path="res://src/player/menu_inventory.gd" id="1_44ory"]
[ext_resource type="Texture2D" uid="uid://cjqqsgrh5a17w" path="res://assets/Untitled.png" id="2_3u44g"]
[ext_resource type="Texture2D" uid="uid://bb36k4r17c88i" path="res://assets/Player/Red Sprite/New/Top Down/Front Movement.png" id="3_ta3d0"]
[ext_resource type="PackedScene" uid="uid://cam7684td3myl" path="res://src/player/item_holder.tscn" id="4_mdd2j"]
[ext_resource type="Texture2D" uid="uid://blny772v7fju" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/1.png" id="5_qgojt"]
[ext_resource type="Texture2D" uid="uid://cvjeryhvlbjt7" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/2.png" id="6_0u8ho"]
[ext_resource type="Texture2D" uid="uid://d2bnlic2heq6d" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/6.png" id="7_8ctvh"]
[ext_resource type="Texture2D" uid="uid://ds5yelr5dsijq" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/5.png" id="8_hr2qh"]
[ext_resource type="Texture2D" uid="uid://dvjaqd6qugr0l" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/3.png" id="9_lv1gd"]
[ext_resource type="Texture2D" uid="uid://dmpvgddf3ycov" path="res://assets/Menu_assets/Super Asset Bundle #2 - Adventure Time v1.5/Adventure Book Bonus/Gold Book/Sprites/Book Resources/Equipments/4.png" id="10_k5yjk"]

[node name="menu_inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 650.0
script = ExtResource("1_44ory")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 133.0
offset_right = 881.0
offset_bottom = 173.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center][color=black]Inventory[/color][/center]"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 135.0
offset_right = 469.0
offset_bottom = 175.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center][color=black]Equipment[/color][/center]"

[node name="inventaire" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 605.0
offset_top = 162.0
offset_right = 933.0
offset_bottom = 372.0
texture = ExtResource("2_3u44g")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="item_description" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = 598.0
offset_top = 353.0
offset_right = 932.0
offset_bottom = 540.0
texture = ExtResource("2_3u44g")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
metadata/_edit_lock_ = true

[node name="name" type="RichTextLabel" parent="item_description"]
layout_mode = 0
offset_left = 113.0
offset_top = 42.0
offset_right = 285.0
offset_bottom = 68.0
text = "name"

[node name="desc" type="RichTextLabel" parent="item_description"]
layout_mode = 0
offset_left = 112.0
offset_top = 68.0
offset_right = 284.0
offset_bottom = 112.0
theme_override_font_sizes/normal_font_size = 10
text = "petit item blabz bkbfejfnlz, j'ai pris du temps et bim et bam poiur aller au fin frfr e"

[node name="stats" type="RichTextLabel" parent="item_description"]
layout_mode = 0
offset_left = 52.0
offset_top = 113.0
offset_right = 291.0
offset_bottom = 142.0
theme_override_font_sizes/normal_font_size = 10
text = "- health : 12                       - hy: 
- str : 13"

[node name="TextureRect" type="TextureRect" parent="item_description"]
layout_mode = 0
offset_left = 43.0
offset_top = 44.0
offset_right = 107.0
offset_bottom = 108.0
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(370, 273)
scale = Vector2(2.81641, 2.81641)
texture = ExtResource("3_ta3d0")
hframes = 6
vframes = 4

[node name="HolderHead" parent="." instance=ExtResource("4_mdd2j")]
visible = false
layout_mode = 0
offset_left = 420.0
offset_top = 200.0
offset_right = 452.0
offset_bottom = 232.0
group = "item"
default_texture = ExtResource("5_qgojt")

[node name="HolderTorso" parent="." instance=ExtResource("4_mdd2j")]
visible = false
layout_mode = 0
offset_left = 420.0
offset_top = 250.0
offset_right = 452.0
offset_bottom = 282.0
group = "item"
default_texture = ExtResource("6_0u8ho")

[node name="HolderFeets" parent="." instance=ExtResource("4_mdd2j")]
visible = false
layout_mode = 0
offset_left = 420.0
offset_top = 300.0
offset_right = 452.0
offset_bottom = 332.0
group = "item"
default_texture = ExtResource("7_8ctvh")

[node name="HolderBelt" parent="." instance=ExtResource("4_mdd2j")]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 250.0
offset_right = 312.0
offset_bottom = 282.0
group = "item"
default_texture = ExtResource("8_hr2qh")

[node name="HolderPants" parent="." instance=ExtResource("4_mdd2j")]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 300.0
offset_right = 312.0
offset_bottom = 332.0
group = "item"
default_texture = ExtResource("9_lv1gd")

[node name="HolderHands" parent="." instance=ExtResource("4_mdd2j")]
layout_mode = 0
offset_left = 280.0
offset_top = 200.0
offset_right = 312.0
offset_bottom = 232.0
group = "item"
default_texture = ExtResource("10_k5yjk")

[connection signal="clicked" from="HolderHead" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderHead" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderHead" to="." method="_data_removed_equiped"]
[connection signal="clicked" from="HolderTorso" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderTorso" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderTorso" to="." method="_data_removed_equiped"]
[connection signal="clicked" from="HolderFeets" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderFeets" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderFeets" to="." method="_data_removed_equiped"]
[connection signal="clicked" from="HolderBelt" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderBelt" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderBelt" to="." method="_data_removed_equiped"]
[connection signal="clicked" from="HolderPants" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderPants" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderPants" to="." method="_data_removed_equiped"]
[connection signal="clicked" from="HolderHands" to="." method="_holder_clicked"]
[connection signal="data_dropped" from="HolderHands" to="." method="_data_dropped_equiped"]
[connection signal="data_removed" from="HolderHands" to="." method="_data_removed_equiped"]
